--- a/package.json
+++ b/package.json
@@ -2,14 +2,8 @@
   "name": "landing",
   "version": "1.0.0",
   "description": "landing =======",
-  "main": "index.js",
+  "main": "server.js",
   "dependencies": {
-    "assemble": "^0.4.35",
-    "grunt-contrib-clean": "^0.5.0",
-    "grunt": "^0.4.2",
-    "grunt-contrib-copy": "^0.5.0"
-  },
-  "devDependencies": {
     "handlebars": "^2.0.0-beta.1",
     "metalsmith": "^0.10.0",
     "metalsmith-markdown": "^0.2.1",
@@ -18,7 +12,8 @@
     "metalsmith-templates": "^0.5.2",
     "metalsmith-drafts": "^0.0.1",
     "metalsmith-copy": "^0.1.2"
-  
+  },
+  "devDependencies": {
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
