--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "landing =======",
   "main": "",
+  "engines":{"node": "0.10.31"},
   "dependencies": {
     "handlebars": "^2.0.0-beta.1",
     "metalsmith": "^0.10.0",
