--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "",
   "engines":{"node": "0.10.31"},
   "dependencies": {
-    "handlebars": "^2.0.0-beta.1",
+    "handlebars": "^2.0.0",
     "metalsmith": "^0.10.0",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-collections": "^0.6.0",
