--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "1.0.0",
   "description": "landing =======",
   "main": "",
-  "engines":{"node": "0.10.31"},
+  "engines": {
+    "node": "0.10.31"
+  },
   "dependencies": {
     "handlebars": "^2.0.0",
     "metalsmith": "^0.10.0",
-    "metalsmith-markdown": "^0.2.1",
     "metalsmith-collections": "^0.6.0",
+    "metalsmith-copy": "^0.1.2",
+    "metalsmith-drafts": "^0.0.1",
+    "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.0",
     "metalsmith-templates": "^0.5.2",
-    "metalsmith-drafts": "^0.0.1",
-    "metalsmith-copy": "^0.1.2"
+    "metalsmith-watch": "^0.1.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
