--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "handlebars": "^2.0.0",
     "metalsmith": "^0.10.0",
+    "metalsmith-assets": "0.0.1",
     "metalsmith-collections": "^0.6.0",
     "metalsmith-copy": "^0.1.2",
     "metalsmith-drafts": "^0.0.1",
@@ -19,7 +20,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "node build.js"
   },
   "repository": {
     "type": "git",
