--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "metalsmith-drafts": "^0.0.1",
     "metalsmith-markdown": "^0.2.1",
     "metalsmith-permalinks": "^0.4.0",
+    "metalsmith-redirect": "0.0.3",
     "metalsmith-templates": "^0.5.2",
     "metalsmith-watch": "^0.1.1"
   },
