--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "handlebars": "^2.0.0",
+    "lodash": "^2.4.1",
     "metalsmith": "^0.10.0",
     "metalsmith-assets": "0.0.1",
     "metalsmith-collections": "^0.6.0",
