--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lodash": "^2.4.1",
     "metalsmith": "^0.10.0",
     "metalsmith-assets": "0.0.1",
+    "metalsmith-build-date": "^0.1.0",
     "metalsmith-collections": "^0.6.0",
     "metalsmith-copy": "^0.1.2",
     "metalsmith-drafts": "^0.0.1",
